# something

./: .gitignore  Cargo.toml  README.md  embed.py
haskell/: something.cabal
haskell/.stack-work/install/x86_64-linux/nightly-2015-07-30/7.10.2/flag-cache/: random-1.1-19f24a9117ee66b96a6e2cbdda5f9ba1
haskell/guess/: Main.hs
kotlin/guess/: numGame.kt
purescript/: README.md  guess.js  index.js
purescript/src/: Main.js  Main.purs
rust/3.2/: Cargo.toml
rust/3.2/src/: main.rs
rust/3.3/: Cargo.toml  count.rb
rust/3.3/src/: main.rs
rust/dining_philosophers/: README.md
rust/guess/src/: main.rs
src/: lib.rs
